# electoral-systems

./: LICENSE  Readme.md  deploy.yaml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: tests.yml
app/: Countries.py  Election.py  Electoral_Systems.py  Regions.py  countries.py  election.py  elections.py  electoral_systems.py  main.py  regions.py  requirements.txt  utils.py
app/data/Costa Rica/: election_data.pkl  level_0.geojson  level_1.geojson
app/data/Spain/: election_data_2000-03-12.pkl  election_data_2004-03-14.pkl  election_data_2008-03-09.pkl  election_data_2011-11-20.pkl  election_data_2015-12-20.pkl  election_data_2016-06-26.pkl  election_data_2019-04-28.pkl  election_data_2019-11-10.pkl  level_0.geojson  level_1.geojson  level_2.geojson  regions_level_1.pkl  regions_level_2.pkl
app/data/USA/: election_data.pkl  level_0.geojson  level_1.geojson
app/texts/: about.md  country_election_metric.md  electoral_systems.md
data/: Data_Sources.txt
data/Costa Rica/: preprocess_data.py
data/Costa Rica/2018/: Alajuela.csv  Cartago.csv  Guanacaste.csv  Heredia.csv  Limón.csv  Puntarenas.csv  San José.csv
data/Costa Rica/cri_adm_2020_shp/: cri_admbnda_adm0_2020.dbf  cri_admbnda_adm0_2020.sbn  cri_admbnda_adm0_2020.sbx  cri_admbnda_adm0_2020.shp  cri_admbnda_adm0_2020.shp.xml  cri_admbnda_adm0_2020.shx  (+6 more)
data/Spain/: PROV_02_201512_1.xlsx  PROV_02_201606_1.xlsx  PROV_02_201904_1.xlsx  PROV_02_201911_1.xlsx  preprocess_data.py  provincias-espanolas.geojson
data/USA/: preprocess_data.py
tests/: test_countries.py  test_elections.py  test_regions.py
(+4 files in other folders)
